chore: fixed menu dropdown alignment issue

--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -21,7 +21,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
 
-        <li dropdown class="nav-item" container="body">
+        <li dropdown class="nav-item" container="body" placement="bottom right" >
           <a id="menu-button" class="nav-link" role="button" dropdownToggle>
             <i style="font-size: 23px;" class="fa fa-bars"></i>
           </a>
