feat: switch from fine uploader to tus for basic collection upload

--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -21,8 +21,8 @@
       <div class="col-md-2"></div>
     </div>
     
-    <div *ngIf="config" class="card bg-default">
-    	<div class="card-header">
+    <div *ngIf="config" class="card border border-secondary">
+    	<div class="card-header bg-secondary">
     		Basic Information
     	</div>
 	    <div class="card-body" style="padding:10px;">
@@ -55,8 +55,8 @@
 	    </div>
 	</div>
     
-    <div *ngIf="config" class="card bg-default">
-    	<div class="card-header">
+    <div *ngIf="config" class="card border border-secondary">
+    	<div class="card-header bg-secondary">
     		Configuration
     	</div>
 	    <div class="card-body" style="padding:10px;">
@@ -149,8 +149,8 @@
 	    </div>
 	</div>
 	
-	<div *ngIf="odmRun && odmRun.output" class="card bg-default">
-    	<div class="card-header">
+	<div *ngIf="odmRun && odmRun.output" class="card border border-secondary">
+    	<div class="card-header bg-secondary">
     		Output
     	</div>
 	    <div class="card-body">
