--- a/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/process-run-modal.component.html
@@ -6,8 +6,8 @@
 <div>
 	<div class="modal-body" tabindex="-1" role="dialog">
 
-		<div *ngIf="configuration" class="card bg-default">
-			<div class="card-header">
+		<div *ngIf="configuration" class="card border border-secondary">
+			<div class="card-header bg-secondary">
 				Configuration
 			</div>
 			<div class="card-body" style="padding:10px;" *ngIf="configuration.type === ProcessConfigType.ODM">
