--- a/uasdm-ui/src/styles/styles.scss
+++ b/uasdm-ui/src/styles/styles.scss
@@ -4,6 +4,9 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
 
+@import '~@uppy/core/css/style.css';
+@import '~@uppy/dashboard/css/style.css';
+
 @import "~bootstrap/dist/css/bootstrap.css";
 
 @import '~fine-uploader/fine-uploader/fine-uploader-new.min.css';
