--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -211,76 +211,79 @@
 
       <ng-container *ngIf="panelType === 0">
         <div class="flex-shrink-1">
-          <!-- Search bar -->
-          <div class="row">
-            <div class="col-md-12">
-              <div class="location-management-widget-section">
-                <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search"
-                  [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)"
-                  [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
-                  [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+          <div class="container-fluid">
+
+            <!-- Search bar -->
+            <div class="row">
+              <div class="col-md-12">
+                <div class="location-management-widget-section">
+                  <input class="form-control search-input" type="text" placeholder="Search..." [(ngModel)]="search"
+                    [typeaheadAsync]="true" [typeahead]="dataSource" (typeaheadOnSelect)="handleClick($event)"
+                    [typeaheadOptionsLimit]="10" [typeaheadItemTemplate]="bsItemTemplate" typeaheadOptionField="label"
+                    [ngModelOptions]="{standalone: true}" (keydown.enter)="$event.preventDefault()" />
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <!-- IF at Site level -->
-              <ng-container *ngIf="current == null || current.type !== 0">
+            <div class="row">
+              <div class="col-md-12">
+                <!-- IF at Site level -->
+                <ng-container *ngIf="current == null || current.type !== 0">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <label class="form-label">Organization</label>
+                      <form #oForm="ngForm">
+                        <organization-field name="organization" [(value)]="organization"
+                          (valueChange)="onOrganizationChange()">
+                        </organization-field>
+                      </form>
+
+                    </div>
+                  </div>
+                  <div class="row" *ngIf="syncs != null && syncs.length > 0">
+                    <div class="col-md-12">
+                      <label class="form-label">Hierarchy</label>
+                      <select [(ngModel)]="hierarchy.oid" name="sync" (change)="onHierarchyChange()">
+                        <option [ngValue]="null"></option>
+                        <option *ngFor="let sync of syncs" [value]="sync.oid">
+                          {{sync.displayLabel.localizedValue}}
+                        </option>
+                      </select>
+                    </div>
+                  </div>
+                </ng-container>
+
+
+                <!-- IF lower than Site -->
                 <div class="row">
                   <div class="col-md-12">
-                    <label class="form-label">Organization</label>
-                    <form #oForm="ngForm">
-                      <organization-field name="organization" [(value)]="organization"
-                        (valueChange)="onOrganizationChange()">
-                      </organization-field>
-                    </form>
+                    <div style="height: 65px; overflow: auto;">
+                      <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
 
-                  </div>
-                </div>
-                <div class="row" *ngIf="syncs != null && syncs.length > 0">
-                  <div class="col-md-12">
-                    <label class="form-label">Hierarchy</label>
-                    <select [(ngModel)]="hierarchy.oid" name="sync" (change)="onHierarchyChange()">
-                      <option [ngValue]="null"></option>
-                      <option *ngFor="let sync of syncs" [value]="sync.oid">
-                        {{sync.displayLabel.localizedValue}}
-                      </option>
-                    </select>
-                  </div>
-                </div>
-              </ng-container>
+                        <ol class="breadcrumb" style="background-color: white; vertical-align: middle; line-height:2">
+                          <li class="breadcrumb-item">
+                            <!-- <i class="fa fa-angle-left" aria-hidden="true"></i> -->
+                            <a (click)="back(null)" style="color: #007276;">IDM Sites</a>
+                          </li>
+                          <li *ngFor="let breadcrumb of breadcrumbs; last as isLast" class="breadcrumb-item"
+                            [ngClass]="{'active':isLast}">
+                            <ng-container *ngIf="breadcrumb.type === 0">
+                              <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
+                                {{breadcrumb.data.name}}</a>
+                              <span *ngIf="isLast"> <b>{{breadcrumb.data.name}}</b> </span>
+                            </ng-container>
+                            <ng-container *ngIf="breadcrumb.type === 1">
+                              <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
+                                {{breadcrumb.data.properties.displayLabel.localizedValue}}
+                              </a>
+                              <span *ngIf="isLast">
+                                <b> {{breadcrumb.data.properties.displayLabel.localizedValue}}</b>
+                              </span>
+                            </ng-container>
+                          </li>
+                        </ol>
+                      </nav>
 
-
-              <!-- IF lower than Site -->
-              <div class="row">
-                <div class="col-md-12">
-                  <div style="height: 65px; overflow: auto;">
-                    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-
-                      <ol class="breadcrumb" style="background-color: white; vertical-align: middle; line-height:2">
-                        <li class="breadcrumb-item">
-                          <!-- <i class="fa fa-angle-left" aria-hidden="true"></i> -->
-                          <a (click)="back(null)" style="color: #007276;">IDM Sites</a>
-                        </li>
-                        <li *ngFor="let breadcrumb of breadcrumbs; last as isLast" class="breadcrumb-item"
-                          [ngClass]="{'active':isLast}">
-                          <ng-container *ngIf="breadcrumb.type === 0">
-                            <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
-                              {{breadcrumb.data.name}}</a>
-                            <span *ngIf="isLast"> <b>{{breadcrumb.data.name}}</b> </span>
-                          </ng-container>
-                          <ng-container *ngIf="breadcrumb.type === 1">
-                            <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
-                              {{breadcrumb.data.properties.displayLabel.localizedValue}}
-                            </a>
-                            <span *ngIf="isLast">
-                              <b> {{breadcrumb.data.properties.displayLabel.localizedValue}}</b>
-                            </span>
-                          </ng-container>
-                        </li>
-                      </ol>
-                    </nav>
-
+                    </div>
                   </div>
                 </div>
               </div>
@@ -293,97 +296,94 @@
 
         <div class="sidebar-content flex-fill overflow-auto bg-white">
           <div id="hierarchy-tree-container"
-            class="location-management-widget-section location-management-list-container">
+            class="location-management-widget-section location-management-list-container container-fluid">
 
 
-            <div class="row">
+            <div class="row" *ngIf="current != null && current.type !== 2">
               <div class="col-md-12">
-                <div class="row" *ngIf="current != null && current.type !== 2">
-                  <div class="col-md-12">
 
-                    <h3 *ngIf="current.type === 1" class="object-label">
-                      {{current.data.properties.displayLabel.localizedValue}}
-                    </h3>
-                    <h3 *ngIf="current.type === 0" class="object-label">
-                      {{current.metadata.label}} {{current.data.name}}
-                    </h3>
+                <h3 *ngIf="current.type === 1" class="object-label">
+                  {{current.data.properties.displayLabel.localizedValue}}
+                </h3>
+                <h3 *ngIf="current.type === 0" class="object-label">
+                  {{current.metadata.label}} {{current.data.name}}
+                </h3>
 
-                    <tabset *ngIf="current.type === 1" class="nav-full-width">
-                      <tab heading="Overview" (selectTab)="activeTab = 'Overview'">
-                        <div class="form-group" *ngFor="let attribute of current.metadata.attributes ">
-                          <label class="form-label">
-                            {{attribute.label.localizedValue}}
-                          </label>
-                          <container-element [ngSwitch]="attribute.type">
-                            <input *ngSwitchCase="'local'" type="text" [name]="attribute.code"
-                              [(ngModel)]="current.data.properties[attribute.code].localizedValue" disabled>
-                            <input *ngSwitchDefault type="text" [name]="attribute.code"
-                              [(ngModel)]="current.data.properties[attribute.code]" disabled>
-                          </container-element>
-                        </div>
+                <tabset *ngIf="current.type === 1" class="nav-full-width">
+                  <tab heading="Overview" (selectTab)="activeTab = 'Overview'">
+                    <div class="form-group" *ngFor="let attribute of current.metadata.attributes ">
+                      <label class="form-label">
+                        {{attribute.label.localizedValue}}
+                      </label>
+                      <container-element [ngSwitch]="attribute.type">
+                        <input *ngSwitchCase="'local'" type="text" [name]="attribute.code"
+                          [(ngModel)]="current.data.properties[attribute.code].localizedValue" disabled>
+                        <input *ngSwitchDefault type="text" [name]="attribute.code"
+                          [(ngModel)]="current.data.properties[attribute.code]" disabled>
+                      </container-element>
+                    </div>
 
-                        <ng-container [ngTemplateOutlet]="locations">
-                        </ng-container>
-                      </tab>
-                      <tab heading="Sites" (selectTab)="activeTab = 'Sites'">
-                        <ng-container [ngTemplateOutlet]="sites">
-                        </ng-container>
-                      </tab>
-                      <tab heading="Products" (selectTab)="activeTab = 'Products'">
-                        <product-panel *ngIf="activeTab === 'Products'" [selection]="current"
-                          [organization]="organization" [filter]="filter" (toggleMapOrtho)="handleMapOrtho($event)"
-                          (toggleMapDem)="handleMapDem($event)"></product-panel>
-                      </tab>
-                    </tabset>
+                    <ng-container [ngTemplateOutlet]="locations">
+                    </ng-container>
+                  </tab>
+                  <tab heading="Sites" (selectTab)="activeTab = 'Sites'">
+                    <ng-container [ngTemplateOutlet]="sites">
+                    </ng-container>
+                  </tab>
+                  <tab heading="Products" (selectTab)="activeTab = 'Products'">
+                    <product-panel *ngIf="activeTab === 'Products'" [selection]="current" [organization]="organization"
+                      [filter]="filter" (toggleMapOrtho)="handleMapOrtho($event)"
+                      (toggleMapDem)="handleMapDem($event)"></product-panel>
+                  </tab>
+                </tabset>
 
-                    <tabset *ngIf="current.type === 0" class="nav-full-width">
-                      <tab [heading]="current.metadata.childLabel"
-                        (selectTab)="activeTab = current.metadata.childLabel">
-                        <ng-container [ngTemplateOutlet]="sites">
-                        </ng-container>
-                      </tab>
-                      <tab heading="Products" (selectTab)="activeTab = 'Products'">
-                        <product-panel *ngIf="activeTab === 'Products'" [selection]="current"
-                          [organization]="organization" [filter]="filter" (toggleMapOrtho)="handleMapOrtho($event)"
-                          (toggleMapDem)="handleMapDem($event)"></product-panel>
-                      </tab>
-                    </tabset>
+                <tabset *ngIf="current.type === 0" class="nav-full-width">
+                  <tab [heading]="current.metadata.childLabel" (selectTab)="activeTab = current.metadata.childLabel">
+                    <ng-container [ngTemplateOutlet]="sites">
+                    </ng-container>
+                  </tab>
+                  <tab heading="Products" (selectTab)="activeTab = 'Products'">
+                    <product-panel *ngIf="activeTab === 'Products'" [selection]="current" [organization]="organization"
+                      [filter]="filter" (toggleMapOrtho)="handleMapOrtho($event)"
+                      (toggleMapDem)="handleMapDem($event)"></product-panel>
+                  </tab>
+                </tabset>
 
-                  </div>
-                </div>
-
-                <ng-container *ngIf="current == null || current.type === 2">
-                  <ng-container [ngTemplateOutlet]="locations"
-                    *ngIf="hierarchy.oid != null && hierarchy.oid.length > 0">
-                  </ng-container>
-
-                  <ng-container *ngIf="hierarchy.oid == null || hierarchy.oid.length === 0">
-                    <tabset class="nav-full-width">
-                      <tab heading="Sites">
-                        <ng-container [ngTemplateOutlet]="sites">
-                        </ng-container>
-                      </tab>
-                    </tabset>
-                  </ng-container>
-                </ng-container>
               </div>
             </div>
+
+            <ng-container *ngIf="current == null || current.type === 2">
+              <ng-container [ngTemplateOutlet]="locations" *ngIf="hierarchy.oid != null && hierarchy.oid.length > 0">
+              </ng-container>
+
+              <ng-container *ngIf="hierarchy.oid == null || hierarchy.oid.length === 0">
+                <tabset class="nav-full-width">
+                  <tab heading="Sites">
+                    <ng-container [ngTemplateOutlet]="sites">
+                    </ng-container>
+                  </tab>
+                </tabset>
+              </ng-container>
+            </ng-container>
           </div>
         </div>
 
 
         <footer class="flex-shrink-1 sidebar-footer">
-          <div class="row" *ngIf="current != null && current.type === 0" style="background:white;">
-            <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
-              <button (click)="handleCreateCollection()" class="btn btn-primary">Create
-                Collection</button>
-              <button *ngIf="current.data.type !== 'Site'" (click)="handleUploadProducts()"
-                class="btn btn-primary">Upload Products</button>
+          <div class="container-fluid">
+
+            <div class="row" *ngIf="current != null && current.type === 0" style="background:white;">
+              <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+                <button (click)="handleCreateCollection()" class="btn btn-primary">Create
+                  Collection</button>
+                <button *ngIf="current.data.type !== 'Site'" (click)="handleUploadProducts()"
+                  class="btn btn-primary">Upload Products</button>
+              </div>
             </div>
-          </div>
-          <div class="row" *ngIf="current == null || current.type !== 0" style="background:white;">
-            <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
-              <button (click)="handleCreate(null,null)" class="btn btn-primary">Add new site</button>
+            <div class="row" *ngIf="current == null || current.type !== 0" style="background:white;">
+              <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+                <button (click)="handleCreate(null,null)" class="btn btn-primary">Add new site</button>
+              </div>
             </div>
           </div>
         </footer>
