--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -74,10 +74,22 @@
     <div class="col-md-12">
       <div class="row" style="margin-right: 10px;">
         <div class="col-sm-12" style="text-align: right; padding-top: 10px; padding-right: 0;">
-          <a (click)="onFilterOpen()">
+        <!-- 
+          <button (click)="onFilterOpen()" type="button" class="btn btn-secondary">
             Advanced filter
             <i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}"></i>
-          </a>
+          </button>
+          -->
+          
+          <button
+			  type="button"
+			  class="advanced-filter btn btn-outline-secondary btn-sm rounded-pill d-inline-flex align-items-center gap-1 advanced-filter fs-6"
+			  (click)="onFilterOpen()"
+			  title="Show advanced filters"
+			>
+			  <i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}" aria-hidden="true"></i>
+			  <span>Advanced filter</span>
+			</button>
         </div>
       </div>
 
