--- a/uasdm-ui/src/app/site/component/modal/filter-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/filter-modal.component.html
@@ -5,7 +5,17 @@
 -->
 
 <div>
-  <h3>Filter Sites</h3>
+  <div class="modal-header">
+	  <h5 class="modal-title mb-0">Filter Sites</h5>
+	  <button
+	    type="button"
+	    class="btn-close"
+	    aria-label="Close"
+	    (click)="bsModalRef.hide()"
+	  ></button>
+	</div>
+  
+  
   <div *ngIf="filter != null" class="modal-body" tabindex="-1" role="dialog">
     <div [@fadeInOnEnter] class="form-group">
 
