chore: removed fine uploader dependencies

--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -41,7 +41,7 @@
             <i *ngIf="content !== type.code" class="fa fa-caret-right"></i>
           </h3>
 
-          <span *ngIf="!tilesLoaded">
+          <span *ngIf="!tilesLoaded float-end">
             <i class="fa fa-spinner fa-spin"></i>
             Loading tiles
           </span>
