--- a/uasdm-ui/src/app/site/component/modal/image-preview-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/image-preview-modal.component.html
@@ -4,7 +4,10 @@
 
 -->
 <div class="modal-body">
-    <h1 *ngIf="header" style="text-align:center;">{{header}} <i class="fa fa-download" (click)="download()" style="cursor:pointer;" title="Click to download"></i></h1>
+    <h1 *ngIf="header" style="text-align:center;">{{header}} 
+        <i class="fa fa-download" (click)="download()" style="cursor:pointer;" title="Click to download"></i>
+        <i class="btn btn-close float-end" style="min-width:0;" (click)="bsModalRef.hide()"></i>
+    </h1>
 
     <div *ngIf="message != null" class="error-container">
         <div class="label-holder">
@@ -18,7 +21,6 @@
     </div>
 
     <div class="image-preview-container">
-        <i class="btn btn-close" style="min-width:0;" (click)="bsModalRef.hide()"></i>
         <div class="image-container">
             <p *ngIf="loading" style="text-align: left;">Loading image...</p>
             <img *ngIf="!loading" class="image-preview img-responsive center-block" [src]="imageToShow | safeHtml" alt="Image"
