chore: remove blue coloring from account in nav menu

--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -29,7 +29,7 @@
           <ul id="menu-dropdown" *dropdownMenu class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start"
             aria-labelledby="menu-button">
             <li role="menuitem">
-              <a id="account-btn" class="dropdown-item user-command-link link-active" (click)="account()">Account</a>
+              <a id="account-btn" class="dropdown-item user-command-link" (click)="account()">Account</a>
             </li>
             <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/tasks" routerLinkActive="active">Workflow Tasks</a>
