chore: admin pages styling

--- a/uasdm-ui/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-ui/src/app/admin/component/account/accounts.component.html
@@ -8,7 +8,7 @@
 
 <!--     <div id="app-container" class="container"> -->
 
-        <h3>
+        <h3 class="settings-header">
             Manage Accounts
 <!--             <localize key="accounts.title"></localize> -->
         </h3>
