--- a/uasdm-ui/src/app/site/component/platform/platforms.component.html
+++ b/uasdm-ui/src/app/site/component/platform/platforms.component.html
@@ -8,7 +8,7 @@
 
 <!-- 	<div id="app-container" class="container"> -->
 
-		<h2>Platforms</h2>
+		<h2 class="settings-header">Platforms</h2>
 
 		<generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" (click)="onClick($event)"></generic-table>		
 <!-- 	</div> -->
