--- a/uasdm-ui/src/app/admin/component/logo/system-logos.component.html
+++ b/uasdm-ui/src/app/admin/component/logo/system-logos.component.html
@@ -12,7 +12,7 @@
 
   <div>
     <span>
-      <h3>
+      <h3 class="settings-header">
         Manage System Images
 <!--         <localize key="system.image.title"></localize> -->
       </h3>
