--- a/uasdm-ui/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-ui/src/app/admin/component/system/system-info.component.html
@@ -8,17 +8,17 @@
 
     <div id="app-container" class="container">
 
-        <h2>
+        <h2 class="settings-header">
             System Information
         </h2>
 
-        <h3>Software Versions</h3>
+        <h3 class="settings-subheader">Software Versions</h3>
         <ul>
             <li>IDM Platform Version: <span id="automated-version-replace">1.5.3</span></li>
             <li>Open Drone Map (ODM): 3.5.0</li>
         </ul>
         
-        <h3>
+        <h3 class="settings-subheader">
             Documentation
         </h3>
         
