--- a/uasdm-ui/src/app/site/component/report/reports.component.html
+++ b/uasdm-ui/src/app/site/component/report/reports.component.html
@@ -12,7 +12,7 @@
       <div class="rule flex-grow-1 mx-2"></div>
       <button
         type="button"
-        class="btn btn-success btn-sm"
+        class="btn btn-primary btn-sm"
         (click)="onExportCSV()"
         aria-label="Export report as CSV"
       >
